k8s1/13go-nombre-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-nombre-service
  namespace: mytestns
spec:
  type: ClusterIP  # Tipo predeterminado (solo accesible dentro del clúster)
  selector:
    app: go-nombre-app  # ¡Debe coincidir con las labels de tu Deployment!
  ports:
  - name: http
    port: 8080        # Puerto del Service
    targetPort: 8080  # Puerto del contenedor (definido en el Deployment)
